--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "evil-id"
+description = "A very easy to use (and evil) id type."
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/the-aNamee/evil-id"
+readme = "README.md"
+license = "MIT"
+keywords = ["id"]
+categories = ["id"]
 
 [features]
 serde = ["dep:serde"]
