--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ all = ["serde", "beep"]
 [dependencies]
 serde = { optional = true, version = "1.0.219" }
 rand = "0.9.2"
+phf = { version = "0.13.1", features = ["macros"], default-features = false }
